# sage_sample_new

./: README.md  environment.yml  pyproject.toml  rever.xsh  setup.py
.github/workflows/: doc.yml  lint.yml  test.yml
darmonpoints/: a_cython_file.pyx  darmonpoint.py  version.py
doc/: conf.py  example.md  index.md  index.rst
docs/: .buildinfo  example.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html  workflow.html
docs/_sources/: example.md.txt  index.rst.txt
