[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "darmonpoints"
version = "6.0.0"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "darmonpoints has no description yet."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython",
]

[tool.setuptools]
packages = [
    "darmonpoints",
]
